<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:style="@style/CardView"
    app:cardBackgroundColor="@android:color/white"
    android:foreground="?android:attr/selectableItemBackground"
    android:elevation="10dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/txtAuthor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/article_img"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txtSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/app_padding_8dp"
        android:layout_alignParentLeft="true"
        tools:text="@string/sectionName"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/textIcons"
        android:background="@color/colorAccent"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtAuthor"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:alpha="0.7"
        android:background="@android:color/black"
        android:paddingEnd="@dimen/app_padding_8dp"
        android:paddingLeft="@dimen/app_padding_8dp"
        android:paddingRight="@dimen/app_padding_8dp"
        android:paddingStart="@dimen/app_padding_8dp"
        tools:text="@string/article_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/textIcons"
        />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/txtDate"
        android:alpha="0.7"
        android:background="@android:color/black"
        android:paddingEnd="@dimen/app_padding_8dp"
        android:paddingLeft="@dimen/app_padding_8dp"
        android:paddingRight="@dimen/app_padding_8dp"
        android:paddingStart="@dimen/app_padding_8dp"
        tools:text="@string/authorName"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/textIcons"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/date_padding_2"
        android:paddingLeft="@dimen/app_padding_8dp"
        android:paddingRight="@dimen/app_padding_8dp"
        tools:text="@string/articleDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/textIcons"
        android:textStyle="italic" />

</RelativeLayout>
</android.support.v7.widget.CardView>